add scalafix-loader with support for version in .scalafix.conf
Add implementation of Scalafix & ScalafixArguments in new project, with
support for targeting a different scalafix-cli version, based on an optional
scalafix version in .scalafix.conf. That scalafix-cli version is fetched and
loaded via service provider when one of the non-with method is invoked, and
initialized with all accumulated parameters.